<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">SEXO</string>


    <string name="app_name">GYMCompanion</string>
    <string name="male">Man</string>
    <string name="female">Woman</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="calc">Calculate</string>
    <string name="result">Your result</string>
    <string name="recalc">Recalculate</string>

    //BMIStrings
    <string name="defaultAge">20</string>
    <string name="defaultWeight">60</string>
    <string name="defaultHeight">120 cm</string>
    <string name="low">Low weight</string>
    <string name="descLow">You are below your optimal weight</string>
    <string name="nor">Normal weight</string>
    <string name="descNor">You are at your optimal weight</string>
    <string name="over">Overweight</string>
    <string name="desOver">You are above your optimal weight</string>
    <string name="obe">Obesity</string>
    <string name="desObe">you are well above your optimal weight</string>
    <string name="error">Error</string>

    //NavHostStrings
    <string name="home">Home</string>
    <string name="bmi">BMI</string>
    <string name="rout">Routines</string>
    <string name="sett">Settings</string>

    //Routines
    <string name="rou1">Peck/triceps routine</string>
    <string name='rou2'>Back/Biceps routine</string>
    <string name="rou3">Legs routine</string>
    //DescRout
    <string name="desc1">Description</string>
    <string name="desc2">Description</string>
    <string name="desc3">Description</string>

    //Days
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>

    //welcome
    <string name="gm">Good morning, %1$s</string>
    <string name="ga">Good afternoon, %1$s</string>
    <string name="ge">Good evening, %1$s</string>

    //Settings
    <string name="theme">Change theme</string>
    <string name="lang">Language</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="git">GitHub</string>
    <string name="selectLang">Select language</string>
    <string name="abt">I\'m development this app alone, be patient, I\'m working on it</string>
    <string name="shareApp">¡Hey! Look at this new app for the gym, you have to try it!</string>

    //Login
    <string name="name">Name</string>
    <string name="enter">Enter</string>

</resources>
