<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backApp"
    android:padding="20dp"
    tools:context=".ui.sett.SettFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSett"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="18dp"
        android:backgroundTint="@color/backCard"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:text="@string/theme"
                    android:textStyle="bold"
                    android:textColor="@color/font"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:backgroundTint="@color/btnTint"
                    android:importantForAccessibility="no"
                    android:src="@drawable/theme"
                    app:tint="@color/font"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlTheme">

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:text="@string/lang"
                    android:textStyle="bold"
                    android:textColor="@color/font"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:backgroundTint="@color/btnTint"
                    android:importantForAccessibility="no"
                    android:src="@drawable/language"
                    app:tint="@color/font"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlGit">

                <TextView
                    android:id="@+id/tvShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:text="@string/share"
                    android:textStyle="bold"
                    android:textColor="@color/font"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    tools:ignore="NotSibling" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:backgroundTint="@color/btnTint"
                    android:importantForAccessibility="no"
                    android:src="@drawable/share"
                    app:tint="@color/font"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlShare">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:text="@string/about"
                    android:textStyle="bold"
                    android:textColor="@color/font"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    tools:ignore="NotSibling" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:backgroundTint="@color/btnTint"
                    android:importantForAccessibility="no"
                    android:src="@drawable/about"
                    app:tint="@color/font"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlGit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlLanguage">

                <TextView
                    android:id="@+id/tvGit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:text="@string/git"
                    android:textStyle="bold"
                    android:textColor="@color/font"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    tools:ignore="NotSibling" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnGit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:backgroundTint="@color/btnTint"
                    android:importantForAccessibility="no"
                    android:src="@drawable/github"
                    app:tint="@color/font"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>